docs(): Fix links with trailing slash

--- a/documentation/docs/graphql/queries.mdx
+++ b/documentation/docs/graphql/queries.mdx
@@ -5,7 +5,7 @@ title: Queries
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-The [CRUDResolver](./resolvers) automatically exposes two query endpoints. The endpoints names will be derived from
+The [CRUDResolver](./resolvers.mdx) automatically exposes two query endpoints. The endpoints names will be derived from
 name provided to `@ObjectType` or the class name.
 
 The following examples are based on the following `TodoItemDTO`
