--- a/documentation/docs/graphql/relations.mdx
+++ b/documentation/docs/graphql/relations.mdx
@@ -239,8 +239,8 @@ export class TodoItemDTO {
 When specifying a connection relation a couple of endpoints will automatically be generated. In this example the following are generated.
 
 * `todoItem.subTasks` - A `query` to retrieve a `TodoItems` `SubTasks`.
-    * The `subTasks` property will accept a [query](../concepts/queries) to allow you to filter, page and sort results.
-    * The `subTasks` property will return a [connection](./types#connectiontype) to page through results.
+    * The `subTasks` property will accept a [query](../concepts/queries.mdx) to allow you to filter, page and sort results.
+    * The `subTasks` property will return a [connection](./types.mdx#connectiontype) to page through results.
 * `addSubTasksToTodoItem` - A `mutation` to add `SubTasks` to a `TodoItem`.
 
 :::note
