--- a/documentation/docs/persistence/services.mdx
+++ b/documentation/docs/persistence/services.mdx
@@ -8,8 +8,8 @@ import TabItem from '@theme/TabItem';
 
 The following ORMs are supported out of the box.
 
-* [TypeOrm](./typeorm/getting-started)
-* [Sequelize](./sequelize/getting-started)
+* [TypeOrm](./typeorm/getting-started.md)
+* [Sequelize](./sequelize/getting-started.md)
 
 
 All examples assume the following entity.
@@ -167,7 +167,7 @@ The above resolver is an example of manually defining the resolver, if you use t
 :::
 
 :::note
-In the above example the DTO and entity are the same shape, if you have a case where they are different or have computed fields check out [Assemblers](../concepts/assemblers) to understand how to convert to and from the DTO/Entity.
+In the above example the DTO and entity are the same shape, if you have a case where they are different or have computed fields check out [Assemblers](../concepts/assemblers.mdx) to understand how to convert to and from the DTO/Entity.
 :::
 
 ## Querying
