--- a/documentation/docs/graphql/mutations.mdx
+++ b/documentation/docs/graphql/mutations.mdx
@@ -5,7 +5,7 @@ title: Mutations
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-The [CRUDResolver](./resolvers) automatically exposes six mutation endpoints. The endpoints names will be derived
+The [CRUDResolver](./resolvers.mdx) automatically exposes six mutation endpoints. The endpoints names will be derived
 from name provided to `@ObjectType` or the class name.
 
 The following examples are based on the following `TodoItemDTO`
