--- a/documentation/docs/graphql/resolvers.mdx
+++ b/documentation/docs/graphql/resolvers.mdx
@@ -121,7 +121,7 @@ When using `NestjsQueryGraphQLModule` or `CRUDResolver` you can define a number 
 
 * `enableSubscriptions?` - Set to `true` to enable graphql subscriptions. See [Subscriptions](./subscriptions.mdx).
 
-* `pagingStrategy?` - Specify to use an alternate paging strategy (`CURSOR`, `OFFSET`). See [Paging Strategy](#paging-strategy).
+* `pagingStrategy?` - Specify to use an alternate paging strategy (`CURSOR`, `OFFSET`, 'NONE'). See [Paging Strategy](#paging-strategy).
 
 * `create` - In addition to [`ResolverOptions`](#resolveroptions) you can also specify the following
     * `CreateDTOClass` - The input DTO to use for create mutations.
@@ -131,7 +131,7 @@ When using `NestjsQueryGraphQLModule` or `CRUDResolver` you can define a number 
 * `read` - In addition to [`ResolverOptions`](#resolveroptions) you can also specify the following
     * `QueryArgs` - The `ArgsType` to use to filter records in `queryMany` endpoint.
     * `Connection` - The `ObjectType` to return from the `queryMany` endpoint.
-    * `pagingStrategy?` - Specify to use an alternate paging strategy (`CURSOR`, `OFFSET`). See [Paging Strategy](#paging-strategy).
+    * `pagingStrategy?` - Specify to use an alternate paging strategy (`CURSOR`, `OFFSET`, 'NONE'). See [Paging Strategy](#paging-strategy).
     * `defaultResultSize=10` - The default number of results to return
     * `maxResultsSize=50` - The maximum number of results an end user can specify to return from a query.
     * `defaultSort=[]` - The default sort to use when querying for records.
@@ -723,9 +723,12 @@ export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
 
 By default `nestjs-query` uses a `cursor` based paging strategy and returns a [connection](https://relay.dev/graphql/connections.htm) for all query many endpoints.
 
-You can override the default `pagingStrategy` to an alternate strategy such as `OFFSET`.
+You can override the default `pagingStrategy` to one of the following alternatives
 
-When using the `OFFSET` strategy your the paging arguments for a many query will accept a `limit` and/or `offset`. This will also change the return type from a `Connection` to a list of items.
+* `OFFSET` - sets paging to allow `limit` and `offset` fields, and returns an `ArrayConnection`.
+* `NONE` - turn off all paging and always return an `ArrayConnection`.
+
+When using the `OFFSET` strategy your the paging arguments for a many query will accept a `limit` and/or `offset`. This will also change the return type from a `CursorConnection` to an `ArrayConnection`.
 
 <Tabs
   defaultValue="module"
@@ -771,6 +774,64 @@ import { TodoItemEntity } from './todo-item.entity';
 @Resolver()
 export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
   pagingStrategy: PagingStrategies.OFFSET,
+}) {
+  constructor(
+      @InjectQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
+  ) {
+    super(service);
+  }
+}
+```
+
+</TabItem>
+</Tabs>
+
+To disable paging entirely you can use the `NONE` `pagingStrategy`. When using `NONE` an `ArrayConnection` will be returned.
+
+<Tabs
+  defaultValue="module"
+  values={[
+    { label: 'NestjsQueryGraphQLModule', value: 'module', },
+    { label: 'CRUDResolver', value: 'resolver', },
+  ]
+}>
+<TabItem value="module">
+
+```ts title="todo-item.module.ts" {14}
+import { NestjsQueryGraphQLModule, PagingStrategies } from '@nestjs-query/query-graphql';
+import { NestjsQueryTypeOrmModule } from '@nestjs-query/query-typeorm';
+import { Module } from '@nestjs/common';
+import { TodoItemDTO } from './todo-item.dto';
+import { TodoItemEntity } from './todo-item.entity';
+
+@Module({
+  imports: [
+    NestjsQueryGraphQLModule.forFeature({
+      imports: [NestjsQueryTypeOrmModule.forFeature([TodoItemEntity])],
+      resolvers: [{
+        DTOClass: TodoItemDTO,
+        EntityClass: TodoItemEntity,
+        pagingStrategy: PagingStrategies.NONE,
+      }],
+    }),
+  ],
+})
+export class TodoItemModule {}
+```
+
+</TabItem>
+<TabItem value="resolver">
+
+```ts title="todo-item.resolver.ts" {9}
+import { QueryService, InjectQueryService } from '@nestjs-query/core';
+import { CRUDResolver, PagingStrategies } from '@nestjs-query/query-graphql';
+import { Resolver } from '@nestjs/graphql';
+import { TodoItemDTO } from './todo-item.dto';
+import { TodoItemEntity } from './todo-item.entity';
+
+@Resolver()
+export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
+  pagingStrategy: PagingStrategies.NONE,
 }) {
   constructor(
       @InjectQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
@@ -1015,8 +1076,8 @@ export class TodoItemResolver extends CRUDResolver(TodoItemDTO) {
       ...{ completed: { is: true } },
     };
 
-    // call the original queryManyConnection method with the new query
-    return this.queryManyConnection({ ...query, ...{ filter } });
+    // call the original queryMany method with the new query
+    return this.queryMany({ ...query, ...{ filter } });
   }
 }
 
@@ -1059,10 +1120,10 @@ const filter: Filter<TodoItemDTO> = {
 Here we do a shallow copy of the `filter` and add `completed: { is: true }`. This will override any completed arguments
 that an end user may have provided to ensure we always query for completed todos.
 
-Finally we call the `queryManyConnection` method from the `CRUDResolver` with the new filter set on the query.
+Finally we call the `queryMany` method from the `CRUDResolver` with the new filter set on the query.
 
 ```ts
-// call the original queryManyConnection method with the new query
-return this.queryManyConnection({ ...query, ...{ filter } });
+// call the original queryMany method with the new query
+return this.queryMany({ ...query, ...{ filter } });
 ```
 
